Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#342 closed bug (fixed)

cursor doesn't change on workspace switch

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

To reproduce it do the following: open StyledEdit and move your mouse to the center of it, now switch to another workspace and you'll see ibeam cursor instad of hand.

Change History (8)

comment:1 by korli, 19 years ago

Summary: cursor doesn't change on workspace switch cursor doesn't change on workspace switch

comment:2 by korli, 19 years ago

Component: KitsServers

comment:3 by korli, 19 years ago

Owner: changed from bpmagic@… to stippi

comment:4 by axeld, 19 years ago

Owner: changed from stippi to axeld

comment:5 by axeld, 19 years ago

Fixed in hrev16953.

comment:6 by axeld, 19 years ago

Status: newclosed

comment:7 by axeld, 19 years ago

Resolution: fixed

comment:8 by korli, 19 years ago

Tested ok

Note: See TracTickets for help on using tickets.