* A fake B_MOUSE_MOVED message is now send on workspace change, and when   a window is closed, too (only happened when a new window was shown   before). This is done via the new Desktop::_SendFakeMouseMoved()   method. This fixes bug #342. * The MouseFilter now always sets Desktop::fWindowUnderMouse, so that   one can differentiate between no window under mouse, and decorator   under mouse. * EventDispatcher::SendFakeMouseMoved() now expects a BMessenger instead   of an EventTarget as target - this guarantees that it can safely be   called with any window now (instead of only the current window).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16953 a95241bf-73f2-0310-859d-f6bbb57e9c96